libnotificationmanager: Fix infinite recursion when adding a second applet

Add a QConcatenateTablesProxyModel subclass which always
has 1 column.

This is a workaround to https://bugreports.qt.io/browse/QTBUG-134210
and https://bugs.kde.org/show_bug.cgi?id=500749
if a model is added to an empty QConcatenateTablesProxyModel
it will report zero columns and non-zero rows, causing a data inconsistence
which causes an infinite recursion in NotificationFilterProxyModel::filterAcceptsRow
remove when the upstream bug is fixed

BUG:500749